--- a/try0.ipynb
+++ b/try0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPPNHJwaC8G3NUYZZHlY1n9",
+      "authorship_tag": "ABX9TyNxD6NdLUFxu/Qe3WC5oqcq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,20 +29,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "9DvTmBDShJ0Z"
-      },
-      "outputs": [],
       "source": [
-        "import numpy as np"
+        "!git clone https://github.com/Yan4S/DataAnalysis.git"
+      ],
+      "metadata": {
+        "id": "VhhvqbD7cNgF",
+        "outputId": "ba43e575-316b-461c-fe60-9f7cf3f88160",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'DataAnalysis'...\n",
+            "remote: Enumerating objects: 83, done.\u001b[K\n",
+            "remote: Counting objects: 100% (83/83), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (76/76), done.\u001b[K\n",
+            "remote: Total 83 (delta 33), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (83/83), 62.66 KiB | 2.41 MiB/s, done.\n",
+            "Resolving deltas: 100% (33/33), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls DataAnalysis/Kaggle"
+      ],
+      "metadata": {
+        "id": "p8u3Uv_DcVrH",
+        "outputId": "f9a1b9ca-72df-47e6-981d-331b5c86fbc0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "README.md  Titanic_gender_submission.csv  Titanic_test.csv  Titanic_train.csv\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "umsUQObnhNJO"
+        "id": "Sb93XLERcW2G"
       },
       "execution_count": null,
       "outputs": []
